--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,12 @@ FROM ruby:2.7.0-alpine
 
 RUN apk update && apk add build-base postgresql-dev && apk add --update tzdata
 
-RUN mkdir /app
-WORKDIR /app
+ENV APP_HOME /app
+RUN mkdir $APP_HOME
+WORKDIR $APP_HOME
 
-COPY Gemfile Gemfile.lock ./
+COPY Gemfile $APP_HOME
+COPY Gemfile.lock $APP_HOME
 
 RUN bundle install
 
@@ -13,4 +15,4 @@ COPY . .
 
 EXPOSE 3030
 
-CMD ["bundle", "exec", "rails", "server", "-P", "3030"]
+CMD ["bin/rails", "server", "-p", "3030", "-b", "0.0.0.0"]
