--- a/docker/env.example.yml
+++ b/docker/env.example.yml
@@ -1,16 +1,31 @@
 default: &default
+  api_key: railwaymen # <- set some long secret value
+
+core: &core
+  container_name: evally_core_app
+  host: http://evally_core_app:3000
+
+recruitable: &recruitable
+  container_name: evally_recruitable_app
   database:
-    host: localhost
+    host: recruitable_db
     username: postgres
-    password: postgres
+    password:
+  host: http://evally_recruitable_app:3030
+
+# ------------------------------------------------------------------------------------------------ #
 
 development:
   <<: *default
-  core_host: localhost:3000
-  self_host: localhost:3030
-
+  core:
+    <<: *core
+  recruitable:
+    <<: *recruitable
 
 test:
   <<: *default
-  core_host: app.test
-  self_host: recruitable.test
+  core:
+    <<: *core
+    host: http://testhost
+  recruitable:
+    <<: *recruitable
