Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,27 @@
 language: ruby
+
 cache:
   - bundler
+
 rvm:
   - 2.7.0
+
 env:
   - RAILS_ENV=test
+
 sudo: required
+
 addons:
   postgresql: '9.6'
   chrome: stable
+
 script:
   - bundle exec rake
+
 before_install:
   - gem install bundler:2.1.4
+
 before_script:
-  - cp config/database.ci.yml config/database.yml
-  - cp config/env.ci.yml config/env.yml
+  - cp config/database.example.yml config/database.yml
+  - cp config/env.example.yml config/env.yml
   - bundle exec rake db:create
