--- a/config/env.example.yml
+++ b/config/env.example.yml
@@ -11,6 +11,9 @@ recruitable: &recruitable
     host: localhost
     username: postgres
     password:
+  redis:
+    url: 'redis://localhost:6379/1'
+    namespace: 'evally_recruitable'
   host: http://localhost:3030
 
 # ------------------------------------------------------------------------------------------------ #
