--- a/docker/env.example.yml
+++ b/docker/env.example.yml
@@ -11,6 +11,9 @@ recruitable: &recruitable
     host: recruitable_db
     username: postgres
     password:
+  redis:
+    url: 'redis://redis:6379/1'
+    namespace: 'evally_recruitable'
   host: http://evally_recruitable_app:3030
 
 # ------------------------------------------------------------------------------------------------ #
