Add email templates for email notifications

--- a/config/env.example.yml
+++ b/config/env.example.yml
@@ -3,6 +3,7 @@ default: &default
 
 core: &core
   container_name: evally_core_app
+  base_mailer: 'Evally <no-reply@example.com>'
   host: http://localhost:3000
 
 recruitable: &recruitable
