--- a/docker/env.example.yml
+++ b/docker/env.example.yml
@@ -3,6 +3,7 @@ default: &default
 
 core: &core
   container_name: evally_core_app
+  base_mailer: 'Evally <no-reply@example.com>'
   host: http://evally_core_app:3000
 
 recruitable: &recruitable
