--- a/config/env.example.yml
+++ b/config/env.example.yml
@@ -16,6 +16,8 @@ recruitable: &recruitable
     url: 'redis://localhost:6379/1'
     namespace: 'evally_recruitable'
   host: http://localhost:3030
+  mailboxes:
+    recruit_documents_matcher: ^evallyrecruitable\+(.+)@example.com$
 
 # ------------------------------------------------------------------------------------------------ #
 
