--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,5 +1,7 @@
 :verbose: true
 :concurrency: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 :queues:
-  - [mailers, 5]
-  - [default, 5]
+  - mailers
+  - default
+  - action_mailbox_routing
+  - action_mailbox_incineration
