Include parsing of salary, availability and message, remove inbound email with recruit document

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,9 @@ Bundler/OrderedGems:
 Rails:
   Enabled: true
 
+Metrics/ClassLength:
+  Max: 120
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
