--- a/config/env.example.yml
+++ b/config/env.example.yml
@@ -17,7 +17,7 @@ recruitable: &recruitable
     namespace: 'evally_recruitable'
   host: http://localhost:3030
   mailboxes:
-    recruit_documents_matcher: ^evallyrecruitable\+(.+)@example.com$
+    recruit_documents_matcher: ^evallyrecruitable\+?(.+)?@example.com$
 
 # ------------------------------------------------------------------------------------------------ #
 
