Update recruit document mailbox routing

--- a/config/env.example.yml
+++ b/config/env.example.yml
@@ -16,8 +16,9 @@ recruitable: &recruitable
     url: 'redis://localhost:6379/1'
     namespace: 'evally_recruitable'
   host: http://localhost:3030
-  mailboxes:
-    recruit_documents_matcher: ^evallyrecruitable\+?(.+)?@example.com$
+  mailbox:
+    group_email: praca@example.com
+    email_matcher: ^evallyrecruitable\+?(.+)?@example.com$
 
 # ------------------------------------------------------------------------------------------------ #
 
