--- a/docker/env.example.yml
+++ b/docker/env.example.yml
@@ -1,5 +1,10 @@
 default: &default
   api_key: railwaymen # <- set some long secret value
+  amazon_ses:
+    address: email-smtp.xxx-1.amazonaws.com
+    username: username
+    password: passsword
+    domain: example.com
 
 core: &core
   container_name: evally_core_app
